Start the game only if all players are ready = WORKING!

--- a/Unity/Unity.csproj
+++ b/Unity/Unity.csproj
@@ -240,15 +240,22 @@
     <Compile Include="Assets\PhotonChatApi\ChatState.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatUserStatus.cs" />
     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
+    <Compile Include="Assets\Prefabs\Resources\UpdateReadyText.cs" />
     <Compile Include="Assets\Scripts\FullScreenBackground.cs" />
     <Compile Include="Assets\Scripts\Helpers\UserHelper.cs" />
     <Compile Include="Assets\Scripts\Managers\AuthenticationManager.cs" />
     <Compile Include="Assets\Scripts\Managers\GeneralGameManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\MainUIManager.cs" />
     <Compile Include="Assets\Scripts\Managers\MusicManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\SelectionManager.cs" />
     <Compile Include="Assets\Scripts\Managers\ServerManager.cs" />
     <Compile Include="Assets\Scripts\Models\Auth\UserModel.cs" />
     <Compile Include="Assets\Scripts\Models\CommonHelper.cs" />
     <Compile Include="Assets\Scripts\Models\ServiceResponseModel.cs" />
+    <Compile Include="Assets\Scripts\Room List Scripts\PlayerItem.cs" />
+    <Compile Include="Assets\Scripts\Room List Scripts\PlayerListUIManager.cs" />
+    <Compile Include="Assets\Scripts\Room List Scripts\RoomItem.cs" />
+    <Compile Include="Assets\Scripts\Room List Scripts\RoomListUIManager.cs" />
     <Compile Include="Assets\Sound Effects\ButtonHoverScript.cs" />
     <Compile Include="Assets\_Tests\NewUIControllers\ConnectionManager.cs" />
     <Compile Include="Assets\_Tests\NewUIControllers\ErrorUIController.cs" />
