--- a/Unity/Unity.csproj
+++ b/Unity/Unity.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.6.2f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -260,12 +258,6 @@
     <Compile Include="Assets\Scripts\Room List Scripts\RoomItem.cs" />
     <Compile Include="Assets\Scripts\Room List Scripts\RoomListUIManager.cs" />
     <Compile Include="Assets\Sound Effects\ButtonHoverScript.cs" />
-    <Compile Include="Assets\_Tests\NewUIControllers\ConnectionManager.cs" />
-    <Compile Include="Assets\_Tests\NewUIControllers\ErrorUIController.cs" />
-    <Compile Include="Assets\_Tests\NewUIControllers\PlayerItem.cs" />
-    <Compile Include="Assets\_Tests\NewUIControllers\PlayerListUIController.cs" />
-    <Compile Include="Assets\_Tests\NewUIControllers\RoomItem.cs" />
-    <Compile Include="Assets\_Tests\NewUIControllers\RoomListUIController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Fonts\Inconsolata\OFL.txt" />
