--- a/Unity/Unity.csproj
+++ b/Unity/Unity.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.6.2f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -242,12 +240,14 @@
     <Compile Include="Assets\PhotonChatApi\ChatState.cs" />
     <Compile Include="Assets\PhotonChatApi\ChatUserStatus.cs" />
     <Compile Include="Assets\PhotonChatApi\IChatClientListener.cs" />
+    <Compile Include="Assets\Prefabs\Resources\PlayerMethods.cs" />
     <Compile Include="Assets\Prefabs\Resources\PlayerSelectMethods.cs" />
     <Compile Include="Assets\Scripts\FullScreenBackground.cs" />
     <Compile Include="Assets\Scripts\Helpers\UserHelper.cs" />
     <Compile Include="Assets\Scripts\Managers\AuthenticationManager.cs" />
     <Compile Include="Assets\Scripts\Managers\CharacterManager.cs" />
-    <Compile Include="Assets\Scripts\Managers\GeneralGameManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Managers\GeneralManager.cs" />
     <Compile Include="Assets\Scripts\Managers\MainUIManager.cs" />
     <Compile Include="Assets\Scripts\Managers\MusicManager.cs" />
     <Compile Include="Assets\Scripts\Managers\PlayerManager.cs" />
